<resources>
    <string name="app_name">SalesApp</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="Login">Login</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="quantity">Please Enter Quantity</string>
    <string name="RemoveItem">Remove</string>
    <string name="AddItem">Add</string>
    <string name="CheckOut">CheckOut</string>
    <string name="TotalPrice">Total:</string>
    <string name="UsernamePrompt">Username</string>
    <string name="ItemPrompt">Please Select Item</string>
    <string name="NamePrompt">Please Enter Your Name</string>
    <string name="AgePrompt">Please Enter Your Age</string>
    <string name="AddressPrompt">Please Enter Your Address</string>
    <string name="PasswordPrompt">Please Enter Your Passowrd</string>
    <string name="SubmitButton">Submit</string>
    <string name="NameHint">Name</string>
    <string name="AgeHint">Age</string>
    <string name="AddressHint">Address</string>
    <string name="PasswordHint">Password</string>
    <string name="RestoreAccount">Restore Account</string>
    <string name="LogOut">Log Out</string>

    <!-- Yousuf's Strings -->
    <string name="view_accounts">View Account(s)</string>
    <string name="blank">blank</string>
    <string name="view_active_accounts">View Active Account(s)</string>
    <string name="view_inactive_accounts">View Inactive Account(s)</string>
    <string name="serialize">Serialize</string>
    <string name="deserialize">Deserialize</string>
    <string name="employee">Employee</string>
    <string name="admin">Admin</string>
    <string name="customer">Customer</string>
    <string name="employee_initialize">Create Employee</string>
    <string name="first_selection">Authenticate New Employee</string>
    <string name="second_selection">Make New User</string>
    <string name="userId">User ID:</string>
    <string name="userId_input">User ID </string>
    <string name="roleId">Role ID:</string>
    <string name="roleId_input">Role ID </string>
    <string name="name">Name: </string>
    <string name="name_input">Name</string>
    <string name="age">Age: </string>
    <string name="age_input">Age</string>
    <string name="address">Address: </string>
    <string name="address_input">Address</string>
    <string name="password">Password: </string>
    <string name="password_input">Password
	</string>
    <string name="roles">Roles: </string>
    <string-array name="roles_array">
        <item>Employee</item>
        <item>Customer</item>
    </string-array>
    <string-array name="items_array">
        <item>FISHING_ROD</item>
        <item>HOCKEY_STICK</item>
        <item>SKATES</item>
        <item>RUNNING_SHOES</item>
        <item>PROTEIN_BAR</item>
    </string-array>
    <string name="itemOne">FISHING_ROD</string>
    <string name="itemTwo">HOCKEY_STICK</string>
    <string name="itemThree">SKATES</string>
    <string name="itemFour">RUNNING_SHOES</string>
    <string name="itemFive">PROTEIN_BAR</string>
    <string name="restock_input">15</string>
    <string name="fifth_selection">Restock Inventory</string>
    <string name="restock_quantity">Quantity</string>
    <string name="restock">Item</string>
    <string name="authenticate_button">Authenticate</string>
    <string name="create_button">Create</string>
    <string name="third_selection">Make New Account</string>
    <string name="customer_id">Customer ID</string>
    <string name="customer_id_input">ID</string>
    <string name="restock_button">Restock</string>
    <string name="promote_employee">Promote Employee</string>
    <string name="employee_id">Employee ID</string>
    <string name="employee_id_input">ID</string>
    <string name="promote_button">Promote</string>
    <string name="sixth_selection">Log Out</string>
    <string name="view_books">View Books</string>
    <string name="view_inventory">View Inventory</string>
    <string name="shopping_cart">Shopping Cart</string>
    <string name="add">+</string>
    <string name="subtract">-</string>
    <string name="btnSaveCart">Save Cart</string>
</resources>
